# bricksmith

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOGO_UPDATE_SUMMARY.md  Makefile  PROMPT.md  README.md  app.yaml  pyproject.toml  quickstart.sh
configs/: databricks.yaml  default.yaml  local.yaml  local_simple.yaml
docs/: BEST_PRACTICES.md  CHAT_ARCHITECTURE.md  EXAMPLES_TO_PROMPTS_MIGRATION.md  FH_Semantic_Refresh_Proposal_v2.md  FH_Semantic_Refresh_immersive.html  ONBOARDING.md  PRD.md  RUN_AND_DEPLOY.md  SCENARIO_GENERATION_FEATURE.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  WORKFLOWS.md  banking_treasury_detailed.html  index.html  semantic_model_refresh_directory_structure.html  semantic_model_refresh_quick_reference.html  semantic_refresh_code_snippets.html  semantic_refresh_complete_code.html  semantic_refresh_complete_code.md
docs/bricksmith/: LOGO_HINTS.md
docs/nano_banana/: API_KEY_SETUP_SUMMARY.md  ARCHITECT.md  AUTHENTICATION.md  CHAT_REFINEMENT.md  CLI_REFERENCE.md  GUARANTEED_CONSTRAINTS.md  LOGO_HINTS.md  LOGO_KITS.md  LOGO_QUICK_START.md  LOGO_SETUP.md  PROMPT_DEVELOPMENT_GUIDE.md  PROMPT_ENGINEERING.md  PROMPT_REFINEMENT.md  QUICKSTART.md  SAFETY_GUARANTEE.md  SCENARIO_TO_DIAGRAM.md  SPELLING_CORRECTION_SUMMARY.md  VISUAL_REFINEMENT_QUICKSTART.md  optimize_with_dspy.md  setup.md  usage.md
examples/: agl_all_6_prompts_v4_final.md  agl_all_6_prompts_v6_concise.md  final_agl_response_classified.tsv  final_agl_response_test.tsv
examples/branding/: agl.txt  data_platform_best_practices.txt
examples/commands/: agl_simplified.sh  agl_synapse_migration.sh  agl_synapse_migration_optimized.sh  full_arch_agl.sh
examples/diagram_specs/: agl_data_economy.yaml  agl_header.yaml  all_logos_example.yaml  example_basic.yaml
examples/logo_kit/: LOGO_REFERENCE.md  README.md
examples/migration/: agl_synapse_pro_v2_12mo.md  agl_synapse_simple_v2.md
examples/prompt_templates/: AGL-Synapse-Decom.md  agl_concentric.txt  agl_synapse_migration.txt  detailed.txt  full_arch_agl.md  synapse_migration.md
examples/rfp_response/: current_state.md  potential_slop.md  proposed_architecture.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
logos/: README.md
logos/agl/: README.md  logo_hints.yaml
logos/aws/: .gitkeep  README.md
logos/azure/: .gitkeep  README.md
logos/default/: .gitkeep  INSTRUCTIONS.md  README.md  README_LOGO_HINTS.md  logo_hints.yaml
logos/gcp/: .gitkeep  README.md
logos/other/: README.md
prompts/: Coles Board-Level Databricks Prompt.md  Coles Databricks Architecture Prompt.md  README.md  agl_all_6_prompts_v4_final.md  agl_all_6_prompts_v5_annual_report_context.md  agl_all_6_prompts_v6_concise.md  agl_zerobus_business_architecture.txt  cfo_deposit_beta_ppnr_reference_architecture.txt  cfo_deposit_beta_ppnr_reference_architecture_v5_101.txt  coles_current_fragmented_state.txt  coles_future_semantic.md  coles_future_unity_catalog.txt  coles_living_intelligence.txt  coles_logical_semantic.md  coles_semantic_fragmentation.md  databricks-arch-prompts.md  databricks-multicloud-v2.md  fh_powerbi_semantic_refresh_reference_architecture.txt  final_agl_response.tsv  lakebase_3tier_architecture.txt  lakebase_unified_state.txt  living_intelligence.txt  nab-fincrime-dq.txt
prompts/branding/: databricks_default.txt  minimal.txt
scripts/: deploy_databricks_app.sh  generate_github_logo.py  run_web_local.sh
(+138 files in other folders)
